--- a/src/styles/components/error-text/rn-error-text.css
+++ b/src/styles/components/error-text/rn-error-text.css
@@ -8,7 +8,9 @@
   letter-spacing: 0.03333em;
   text-decoration: inherit;
   text-transform: inherit;
+  display: block;
   margin-top: 0;
+  /* @alternate */
   line-height: normal;
   color: #b00020;
   /* @alternate */
